FIx: Misc Form Layout fixes

--- a/views/builder.hbs
+++ b/views/builder.hbs
@@ -81,14 +81,14 @@
           </div>
 
           <div class="mb-3">
-            <div class="form-check">
-              <input id="editRequired" class="form-check-input" type="checkbox">
+            <div class="form-check form-switch">
+              <input id="editRequired" class="form-check-input" type="checkbox" role="switch">
               <label class="form-check-label" for="editRequired">Required</label>
             </div>
           </div>
           <div class="mb-3">
-            <div class="form-check">
-              <input id="editDoNotStore" class="form-check-input" type="checkbox">
+            <div class="form-check form-switch">
+              <input id="editDoNotStore" class="form-check-input" type="checkbox" role="switch">
               <label class="form-check-label" for="editDoNotStore">Do not store this field</label>
             </div>
           </div>
