--- a/views/forms.hbs
+++ b/views/forms.hbs
@@ -46,34 +46,35 @@
                 <td><span class="text-muted">{{this.createdAt}}</span></td>
                 <td class="text-end">
                   <div class="d-inline-flex align-items-center gap-1">
+                    <button type="button" class="btn btn-sm btn-outline-primary js-act-edit">
+                      <i class="icon-base ti tabler-edit icon-sm me-1"></i>
+                      Edit
+                    </button>
                     <div class="btn-group">
                       <button
                         type="button"
-                        class="btn btn-sm btn-icon rounded-pill dropdown-toggle hide-arrow btn-outline-primary js-actions"
+                        class="btn btn-sm btn-icon rounded-pill dropdown-toggle hide-arrow btn-text-secondary js-actions"
                         data-bs-toggle="dropdown"
                         data-bs-container="body"
                         aria-expanded="false"
                         aria-label="Actions">
-                        <i class="ti tabler-dots-vertical"></i>
+                        <i class="icon-base ti tabler-dots-vertical icon-20px"></i>
                       </button>
                       <ul class="dropdown-menu dropdown-menu-end">
-                        <li>
-                          <a class="dropdown-item js-act-edit" href="javascript:void(0);">
-                            <i class="icon-base ti tabler-edit icon-sm me-2"></i>
-                            Edit
-                          </a>
-                        </li>
                         <li>
                           <a class="dropdown-item js-act-rename" href="javascript:void(0);">
                             <i class="icon-base ti tabler-letter-case icon-sm me-2"></i>
                             Rename
                           </a>
                         </li>
+                        <li>
+                          <a class="dropdown-item text-danger js-delete" href="javascript:void(0);">
+                            <i class="icon-base ti tabler-trash icon-sm me-2"></i>
+                            Delete
+                          </a>
+                        </li>
                       </ul>
                     </div>
-                    <button type="button" class="btn btn-sm btn-icon btn-outline-danger js-delete" aria-label="Delete">
-                      <i class="ti tabler-trash"></i>
-                    </button>
                   </div>
                 </td>
               </tr>
@@ -89,7 +90,7 @@
 
 {{!-- Create Form wizard modal --}}
 <div class="modal fade" id="createFormModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-fullscreen modal-dialog-gapped">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content rounded-3" id="createFormWizard">
       <div class="modal-header">
         <h5 class="modal-title js-wiz-title">Create a Form</h5>
@@ -101,7 +102,7 @@
           <div class="row g-2">
             <div class="col-6">
               <div class="ratio ratio-1x1">
-                <button type="button" class="btn btn-outline-primary w-100 h-100 d-flex flex-column align-items-center justify-content-center js-choose-blank">
+                <button type="button" class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center js-choose-blank">
                   <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-file-plus icon-42px"></i></h2>
                   <div class="fw-medium text-center">Create a blank form</div>
                 </button>
@@ -109,7 +110,7 @@
             </div>
             <div class="col-6">
               <div class="ratio ratio-1x1">
-                <button type="button" class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center js-choose-template">
+                <button type="button" class="btn btn-outline-primary w-100 h-100 d-flex flex-column align-items-center justify-content-center js-choose-template">
                   <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-template icon-42px"></i></h2>
                   <div class="fw-medium text-center">Start from a template</div>
                 </button>
@@ -135,78 +136,62 @@
 
         <div class="js-step d-none" data-step="templates">
           <p class="text-muted">Pick a template</p>
-          <div class="row g-2">
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="newsletter">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-mail icon-42px"></i></h2>
-                  <div class="fw-medium text-center">Newsletter Signup</div>
-                </label>
-              </div>
+          <div class="row row-cols-2 g-2">
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="newsletter">
+              <i class="icon-base ti tabler-mail me-2 icon-20px"></i>
+              <span class="fw-medium">Newsletter Signup</span>
+            </label>
             </div>
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="complaints">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-alert-triangle icon-42px"></i></h2>
-                  <div class="fw-medium text-center">Complaints</div>
-                </label>
-              </div>
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="complaints">
+              <i class="icon-base ti tabler-alert-triangle me-2 icon-20px"></i>
+              <span class="fw-medium">Complaints</span>
+            </label>
             </div>
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="profile">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-user icon-42px"></i></h2>
-                  <div class="fw-medium text-center">Profile</div>
-                </label>
-              </div>
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="profile">
+              <i class="icon-base ti tabler-user me-2 icon-20px"></i>
+              <span class="fw-medium">Profile</span>
+            </label>
             </div>
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="rsvp">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-calendar icon-42px"></i></h2>
-                  <div class="fw-medium text-center">Event RSVP</div>
-                </label>
-              </div>
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="rsvp">
+              <i class="icon-base ti tabler-calendar me-2 icon-20px"></i>
+              <span class="fw-medium">Event RSVP</span>
+            </label>
             </div>
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="contact">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-phone icon-42px"></i></h2>
-                  <div class="fw-medium text-center">Contact Us</div>
-                </label>
-              </div>
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="contact">
+              <i class="icon-base ti tabler-phone me-2 icon-20px"></i>
+              <span class="fw-medium">Contact Us</span>
+            </label>
             </div>
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="support">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-lifebuoy icon-42px"></i></h2>
-                  <div class="fw-medium text-center">Support Ticket</div>
-                </label>
-              </div>
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="support">
+              <i class="icon-base ti tabler-lifebuoy me-2 icon-20px"></i>
+              <span class="fw-medium">Support Ticket</span>
+            </label>
             </div>
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="job">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-briefcase icon-42px"></i></h2>
-                  <div class="fw-medium text-center">Job Application</div>
-                </label>
-              </div>
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="job">
+              <i class="icon-base ti tabler-briefcase me-2 icon-20px"></i>
+              <span class="fw-medium">Job Application</span>
+            </label>
             </div>
-            <div class="col-6">
-              <div class="ratio ratio-1x1">
-                <label class="btn btn-outline-secondary w-100 h-100 d-flex flex-column align-items-center justify-content-center template-tile">
-                  <input class="d-none" type="radio" name="templateChoice" value="nps">
-                  <h2 class="mb-1 text-reset"><i class="icon-base ti tabler-chart-pie icon-42px"></i></h2>
-                  <div class="fw-medium text-center">NPS Survey</div>
-                </label>
-              </div>
+            <div class="col">
+            <label class="btn btn-outline-secondary d-inline-flex align-items-center justify-content-start w-100 template-tile">
+              <input class="d-none" type="radio" name="templateChoice" value="nps">
+              <i class="icon-base ti tabler-chart-pie me-2 icon-20px"></i>
+              <span class="fw-medium">NPS Survey</span>
+            </label>
             </div>
           </div>
         </div>
@@ -385,15 +370,26 @@
       titleEl.textContent = 'Create a Form';
     }
 
-    wiz.querySelector('.js-choose-blank')?.addEventListener('click', () => show('blank'));
+    wiz.querySelector('.js-choose-blank')?.addEventListener('click', () => {
+      // If user opts for blank after exploring templates, reset any prefilled values
+      fromTemplates = false;
+      selectedFields = [];
+      if (inputTitle) inputTitle.value = '';
+      show('blank');
+    });
     wiz.querySelector('.js-choose-template')?.addEventListener('click', () => show('templates'));
-    // Template tile click -> select radio and set active style
+    // Template tile click -> select radio and set primary label style
     wiz.querySelector('[data-step="templates"]')?.addEventListener('click', (e) => {
       const tile = e.target.closest('.template-tile');
       if (!tile) return;
-      // Clear previous active
-      wiz.querySelectorAll('.template-tile.active').forEach(el => el.classList.remove('active'));
-      tile.classList.add('active');
+      // Reset all tiles to outline-secondary and remove active/primary
+      wiz.querySelectorAll('.template-tile').forEach(el => {
+        el.classList.remove('active', 'btn-primary', 'btn-label-primary');
+        el.classList.add('btn-outline-secondary');
+      });
+      // Activate selected tile with primary label color (not filled)
+      tile.classList.add('active', 'btn-label-primary');
+      tile.classList.remove('btn-outline-secondary', 'btn-primary');
       const input = tile.querySelector('input[type=radio][name=templateChoice]');
       if (input) { input.checked = true; input.dispatchEvent(new Event('change', { bubbles: true })); }
     });
@@ -447,6 +443,11 @@
 
     // Reset wizard on open
     modalEl.addEventListener('show.bs.modal', () => {
+      // Clear selected template visual state
+      wiz.querySelectorAll('.template-tile').forEach(el => {
+        el.classList.remove('active', 'btn-primary', 'btn-label-primary');
+        el.classList.add('btn-outline-secondary');
+      });
       wiz.querySelector('input[name="templateChoice"]:checked')?.closest('label')?.classList.remove('active');
       const checked = wiz.querySelector('input[name="templateChoice"]:checked');
       if (checked) checked.checked = false;
