--- a/views/forms.hbs
+++ b/views/forms.hbs
@@ -10,22 +10,37 @@
   <div class="card-body p-0">
     <div class="table-responsive">
       <table class="table table-hover mb-0 align-middle">
-        <thead class="table-light">
+        <colgroup>
+          <col style="width: 35%">
+          <col style="width: 15%">
+          <col style="width: 20%">
+          <col style="width: 20%">
+          <col class="col-actions">
+        </colgroup>
+        <thead>
           <tr>
-            <th style="width:20%">Title</th>
-            <th style="width:15%">Category</th>
-            <th style="width:20%">Updated</th>
-            <th style="width:20%">Created</th>
-            <th class="text-end" style="width:25%">Actions</th>
+            <th>Title</th>
+            <th>Category</th>
+            <th>Updated</th>
+            <th>Created</th>
+            <th class="col-actions">Actions</th>
           </tr>
         </thead>
-        <tbody>
+        <tfoot class="table-border-bottom-0">
+          <tr>
+            <th class="rounded-start-bottom">Title</th>
+            <th>Category</th>
+            <th>Updated</th>
+            <th>Created</th>
+            <th class="col-actions">Actions</th>
+          </tr>
+        </tfoot>
+        <tbody class="table-border-bottom-0">
           {{#if forms.length}}
             {{#each forms}}
               <tr data-id="{{this.id}}">
                 <td class="fw-medium js-title">{{this.title}}</td>
-                <td>
-                  <div class="btn-group w-100">
+                <td><div class="btn-group w-100">
                     <button
                       type="button"
                       class="btn btn-sm dropdown-toggle js-cat-btn w-100 d-flex justify-content-between align-items-center"
@@ -44,8 +59,7 @@
                 </td>
                 <td><span class="text-muted">{{this.updatedAt}}</span></td>
                 <td><span class="text-muted">{{this.createdAt}}</span></td>
-                <td class="text-end">
-                  <div class="d-inline-flex align-items-center gap-1">
+                <td class="col-actions"><div class="d-inline-flex align-items-center gap-1 justify-content-start">
                     <button type="button" class="btn btn-sm btn-outline-primary js-act-edit">
                       <i class="icon-base ti tabler-edit icon-sm me-1"></i>
                       Edit
@@ -619,3 +633,6 @@
     </div>
   </div>
   </div>
+
+
+
