Fix: Table category edit

--- a/views/admin-users.hbs
+++ b/views/admin-users.hbs
@@ -36,7 +36,7 @@
                   </button>
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-icon rounded-pill dropdown-toggle hide-arrow btn-text-secondary js-more" data-bs-toggle="dropdown" aria-expanded="false">
-                      <i class="icon-base ti tabler-dots-vertical icon-sm"></i>
+                      <i class="icon-base ti tabler-dots-vertical icon-20px"></i>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end">
                       <li>
